header, footer, home page-sections

--- a/client/src/layouts/site/header/index.scss
+++ b/client/src/layouts/site/header/index.scss
@@ -1,5 +1,9 @@
 #header {
   padding: 20px 0;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  // transition: all 0.3s;
   .header {
     display: flex;
     justify-content: space-between;
@@ -12,20 +16,54 @@
         ul {
           display: flex;
           align-items: center;
-          column-gap: 30px;
+          column-gap: 50px;
           li {
+            position: relative;
             a {
               color: black;
               font-size: 13px;
               font-weight: 600;
               letter-spacing: 1px;
+              transition: all 0.5s;
+              .menu-arrow {
+                border: solid #212529;
+                border-radius: 0.5px;
+                border-width: 0 2px 2px 0;
+                padding: 2px;
+                -webkit-transform: rotate(45deg);
+                transform: rotate(45deg);
+                -webkit-transition: all 0.5s;
+                transition: all 0.5s;
+                margin-left: 10px;
+                position: absolute;
+                top: 5px;
+              }
               &.active {
                 color: #396cf0;
+                .menu-arrow {
+                  border: solid #396cf0;
+                  border-radius: 0.5px;
+                  border-width: 0 2px 2px 0;
+                  display: inline-block;
+                  padding: 2px;
+                  margin-left: 10px;
+                  position: absolute;
+                  top: 5px;
+                }
               }
-            }
-            .fa-solid {
-              font-size: 10px;
-              font-weight: 800;
+              &:hover {
+                color: #396cf0;
+                .menu-arrow {
+                  border: solid #396cf0;
+                  border-radius: 0.5px;
+                  border-width: 0px 2px 2px 0px;
+                  padding: 2px;
+                  -webkit-transform: rotate(225deg);
+                  transform: rotate(225deg);
+                  position: absolute;
+                  top: 8px;
+                }
+              }
             }
           }
         }
@@ -33,7 +71,7 @@
     }
     .settings-profil {
       display: flex;
-      column-gap: 20px;
+      column-gap: 8px;
       align-items: center;
       .setting-search {
         width: 36px;
@@ -69,6 +107,186 @@
         .fa-solid {
           font-size: 15px;
         }
+      }
+    }
+  }
+}
+
+
+#fixed-header {
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 3px 0px #e6e4e4;
+  width: 100%;
+  position: fixed;
+  z-index: 4;
+  top: 0;
+  // transition: all 0.3s;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .navbar {
+      display: flex;
+      align-items: center;
+      column-gap: 60px;
+      nav {
+        ul {
+          display: flex;
+          align-items: center;
+          column-gap: 50px;
+          li {
+            position: relative;
+            a {
+              color: black;
+              font-size: 13px;
+              font-weight: 600;
+              letter-spacing: 1px;
+              transition: all 0.5s;
+              .menu-arrow {
+                border: solid #212529;
+                border-radius: 0.5px;
+                border-width: 0 2px 2px 0;
+                padding: 2px;
+                -webkit-transform: rotate(45deg);
+                transform: rotate(45deg);
+                -webkit-transition: all 0.5s;
+                transition: all 0.5s;
+                margin-left: 10px;
+                position: absolute;
+                top: 5px;
+              }
+              &.active {
+                color: #396cf0;
+                .menu-arrow {
+                  border: solid #396cf0;
+                  border-radius: 0.5px;
+                  border-width: 0 2px 2px 0;
+                  display: inline-block;
+                  padding: 2px;
+                  margin-left: 10px;
+                  position: absolute;
+                  top: 5px;
+                }
+              }
+              &:hover {
+                color: #396cf0;
+                .menu-arrow {
+                  border: solid #396cf0;
+                  border-radius: 0.5px;
+                  border-width: 0px 2px 2px 0px;
+                  padding: 2px;
+                  -webkit-transform: rotate(225deg);
+                  transform: rotate(225deg);
+                  position: absolute;
+                  top: 8px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .settings-profil {
+      display: flex;
+      column-gap: 8px;
+      align-items: center;
+      .setting-search {
+        width: 36px;
+        height: 36px;
+        background-color: #396cf0;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: all 0.3s;
+        .fa-solid {
+          color: #fff;
+          font-size: 14px;
+        }
+        &:hover {
+          background-color: #2b51b4;
+        }
+      }
+      .user {
+        width: 36px;
+        height: 36px;
+        border: 1px solid #d4d4d4;
+        box-shadow: 0px 0px 5px 0px #d4d4d4;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        &:hover {
+          border: 1px solid #396cf0;
+        }
+        .fa-solid {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+}
+
+
+.ant-dropdown {
+  position: absolute;
+  top: 70px !important;
+  .ant-dropdown-menu {
+    box-shadow: 0px 0px 3px 0px rgb(219, 219, 219);
+    border-radius: 5px;
+    padding: 15px 35px 15px 5px;
+    .ant-dropdown-menu-item {
+      .ant-dropdown-menu-title-content {
+        a {
+          color: black;
+          font-size: 11px;
+          font-weight: 600;
+          letter-spacing: 1px;
+          transition: all 0.5s;
+          .blog-item {
+            box-shadow: 0px 0px 3px 0px rgb(219, 219, 219);
+            width: 160px;
+            border-radius: 5px;
+            position: absolute;
+            left: 168px;
+            top: -4px;
+            padding: 15px 50px 15px 15px;
+            li {
+              padding-top: 15px;
+            }
+          }
+          .blog-arrow {
+            border: solid #212529;
+            border-radius: 0.5px;
+            border-width: 2px 2px 0px 0;
+            padding: 2px;
+            -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+            -webkit-transition: all 0.5s;
+            transition: all 0.5s;
+            margin-left: 80px;
+            position: absolute;
+            top: 13px;
+          }
+          &.active {
+            color: #396cf0;
+          }
+          &:hover {
+            color: #396cf0;
+            .blog-arrow {
+              border: solid #396cf0;
+              border-radius: 0.5px;
+              border-width: 2px 2px 0px 0;
+              padding: 2px;
+            }
+          }
+        }
+      }
+      &:hover {
+        background-color: #fff;
       }
     }
   }
