--- a/client/src/pages/site/home/index.scss
+++ b/client/src/pages/site/home/index.scss
@@ -1,6 +1,6 @@
 #home-sections {
   #search-doctors {
-    padding-top: 80px;
+    padding-top: 170px;
     .search-doctors {
       display: flex;
       justify-content: space-between;
@@ -127,15 +127,235 @@
             font-size: 15px;
             margin: 15px 0;
           }
-          button{
+          button {
             border: 0;
             outline: 0;
             background-color: transparent;
             color: #396cf0;
             font-size: 15px;
-            .fa-solid{
+            .fa-solid {
               font-size: 14px;
               margin-left: 4px;
+            }
+          }
+        }
+      }
+    }
+  }
+  #about {
+    width: 100%;
+    padding-bottom: 112px;
+    padding-top: 40px;
+    position: relative;
+    .about {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .head {
+        background-color: rgba(57, 108, 240, 0.1);
+        border: 1px solid rgba(57, 108, 240, 0.1);
+        border-radius: 50rem;
+        color: #396cf0;
+        font-size: 11px;
+        display: inline-block;
+        letter-spacing: 0.5px;
+        padding: 4px 8px;
+        font-weight: 600;
+        text-align: center;
+      }
+      h1 {
+        margin: 16px 0;
+        letter-spacing: 0.5px;
+        font-size: 24px;
+        line-height: 1.5;
+        font-weight: 600;
+        font-size: 24px;
+      }
+      p {
+        margin-bottom: 16px;
+        color: #8492a6;
+        line-height: 1.6;
+        font-size: 15px;
+      }
+      button {
+        padding: 10px 20px;
+        outline: 0;
+        cursor: pointer;
+        font-size: 15px;
+        letter-spacing: 0.5px;
+        -webkit-transition: all 0.4s;
+        transition: all 0.4s;
+        border-radius: 5px;
+        background-color: rgba(57, 108, 240, 0.1);
+        border: 1px solid rgba(57, 108, 240, 0.1);
+        color: #396cf0;
+        -webkit-box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+        box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+        font-size: 15px;
+        &:hover {
+          background-color: #305ccc;
+          color: #fff;
+        }
+      }
+    }
+    .video {
+      .img {
+        position: relative;
+        img {
+          width: 460px;
+        }
+        .play-video {
+          position: absolute;
+          bottom: 50%;
+          z-index: 2;
+          -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+          right: 0;
+          left: 0;
+          text-align: center;
+          a {
+            display: inline-block;
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke: 2px #396cf0;
+            width: 75px;
+            height: 75px;
+            font-size: 25px;
+            border-radius: 50%;
+            line-height: 70px;
+            display: inline-block;
+            background-color: #fff;
+            transition: all 0.4s;
+            cursor: pointer;
+            &:hover {
+              -webkit-text-fill-color: #396cf0;
+            }
+            .fa-solid {
+              font-size: 18px;
+            }
+          }
+        }
+      }
+    }
+    .youtube-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 8;
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #142130ef;
+      iframe {
+        border: 0;
+        box-shadow: 0 0 1px 0 rgba(194, 207, 240, 0.3);
+      }
+      .close {
+        position: absolute;
+        right: 50px;
+        top: 50px;
+        font-size: 36px;
+        color: #e9ecef;
+        cursor: pointer;
+      }
+    }
+  }
+  #our-work {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(99, 113, 133, 0.325),
+        rgba(99, 113, 133, 0.325)
+      ),
+      url("../../../assets/images/background2.jpg");
+    // background-repeat: no-repeat;
+    background-position: center;
+    .our-work {
+      padding: 80px 0;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .cards {
+        margin-top: 20px;
+        .card {
+          display: flex;
+          justify-content: center;
+          column-gap: 20px;
+          background-color: #fff;
+          margin-bottom: 20px;
+          border-radius: 10px;
+          -webkit-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+          box-shadow: 0 0 3px rgba(60, 72, 88, 0.15);
+          border: 0;
+          padding: 1.5rem;
+          position: relative;
+          z-index: 3;
+          .icon {
+            margin-top: 8px;
+            .fa-solid {
+              font-size: 30px;
+              font-weight: 600;
+              color: #305ccc;
+              transition: all 0.5s ease;
+            }
+          }
+          .text {
+            width: 320px;
+            h4 {
+              font-size: 16px;
+              font-weight: 600;
+              transition: all 0.5s ease;
+            }
+            p {
+              font-size: 14px;
+              color: #8492a6;
+              line-height: 1.6;
+              margin-top: 10px;
+            }
+          }
+          &:hover {
+            background-color: #305ccc;
+            .fa-solid {
+              color: #fff;
+            }
+            .text {
+              h4 {
+                color: #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  #question-answer {
+    padding: 80px 0;
+    .question-answer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .img {
+        img {
+          width: 480px;
+        }
+      }
+      .accordion {
+        .ant-collapse {
+          .ant-collapse-item {
+            width: 480px;
+            .ant-collapse-header {
+              .ant-collapse-header-text {
+                color: #000;
+                font-weight: 600;
+              }
+            }
+            &.blue {
+              .ant-collapse-header {
+                .ant-collapse-header-text {
+                  color: #305ccc;
+                }
+              }
             }
           }
         }
