--- a/client/src/layouts/site/header/index.scss
+++ b/client/src/layouts/site/header/index.scss
@@ -242,6 +242,7 @@
           letter-spacing: 1px;
           transition: all 0.5s;
           .blog-item {
+            background-color: #fff;
             box-shadow: 0px 0px 3px 0px rgb(219, 219, 219);
             width: 160px;
             border-radius: 5px;
