--- a/client/src/pages/site/home/index.scss
+++ b/client/src/pages/site/home/index.scss
@@ -37,12 +37,16 @@
           button {
             border-radius: 50px;
             padding: 16px 30px;
+            margin: 1px 2px;
             border: 0;
             outline: 0;
             background-color: #396cf0;
             color: #fff;
             cursor: pointer;
             transition: all 0.5s;
+            .fa-solid{
+              margin-right: 8px;
+            }
             &:hover {
               background-color: #305ccc;
             }
