--- a/client/src/pages/site/doctors-team/index.scss
+++ b/client/src/pages/site/doctors-team/index.scss
@@ -1,64 +1,87 @@
-#our-specialists {
-  padding-top: 80px;
-  .our-specialists {
-    .cards-head {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      .head {
-        background-color: rgba(57, 108, 240, 0.1);
-        border: 1px solid rgba(57, 108, 240, 0.1);
-        border-radius: 50rem;
-        color: #396cf0;
-        font-size: 11px;
-        display: inline-block;
-        letter-spacing: 0.5px;
-        padding: 4px 10px;
-        font-weight: 600;
-        text-align: center;
+#doctors-team {
+  .doctors-team {
+    padding: 60px 0;
+    background-color: #f8f9fa;
+    width: 100%;
+    .doctors {
+      .header-team {
+        display: flex;
+        justify-content: center;
+        margin: 130px 0;
+        .head {
+          h1 {
+            text-align: center;
+            letter-spacing: 0.5px;
+            font-size: 28px;
+            line-height: 1.5;
+            font-weight: 600;
+            color: #212529;
+          }
+          p {
+            text-align: center;
+            color: #8492a6;
+            max-width: 600px;
+            font-size: 15px;
+            line-height: 1.6;
+            margin-top: 20px;
+          }
+        }
+        .links {
+          display: flex;
+          justify-content: center;
+          column-gap: 15px;
+          margin-top: 40px;
+          span {
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+            a {
+              color: #212529;
+              font-size: 12px;
+              font-weight: 500;
+              letter-spacing: 1px;
+              transition: all 0.5s;
+              &.active {
+                color: #396cf0;
+              }
+              &:hover {
+                color: #396cf0;
+              }
+            }
+            .antd-icon {
+              font-size: 8px;
+              font-weight: 600;
+            }
+          }
+        }
       }
     }
-    h1 {
-      margin-top: 20px;
-      text-align: center;
-      letter-spacing: 0.5px;
-      font-size: 24px;
-      line-height: 1.5;
-      font-weight: 600;
-    }
-    .head-title {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      p {
-        width: 600px;
-        text-align: center;
-        margin-top: 25px;
-        color: #8492a6;
-        line-height: 1.6;
-        font-size: 15px;
-      }
-    }
-    .cards-doctor {
+  }
+  .card-doctors-team {
+    background-color: #fff;
+    padding: 80px 0;
+    .cards {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
       width: 100%;
       margin-top: 60px;
       .card {
-        width: 23.6%;
+        width: 49%;
         box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
+        display: flex;
         .image {
           overflow: hidden;
           display: flex;
           justify-content: center;
+          width: 50%;
+          padding: 10px;
           img {
-            width: 100%;
+            max-width: 100%;
+            height: auto;
             -webkit-transition: all 0.5s;
             transition: all 0.5s;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
             &:hover {
               transform: scale(1.05);
             }
@@ -66,7 +89,7 @@
         }
         .about-doctor {
           padding: 20px;
-
+          width: 50%;
           h4 {
             a {
               font-weight: 600;
