--- a/client/src/pages/site/home/index.scss
+++ b/client/src/pages/site/home/index.scss
@@ -52,13 +52,60 @@
             }
           }
         }
-        .note {
-          margin-top: 10px;
-          color: #8492a6;
-          font-size: 15px;
-          line-height: 1.6;
-          span {
-            font-weight: bolder;
+        .doctors-card {
+          display: flex;
+          column-gap: 30px;
+          margin-top: 20px;
+          .note {
+            margin-top: 15px;
+            color: #8492a6;
+            font-size: 15px;
+            line-height: 1.6;
+            span {
+              font-weight: bolder;
+            }
+          }
+          #doctors {
+            .doctors {
+              position: absolute;
+              z-index: 444;
+              ul {
+                li {
+                  width: 180px;
+                  // background-color: #fff;
+                  display: flex;
+                  align-items: center;
+                  column-gap: 10px;
+                  // border: 1px solid #ececec;
+                  // border-radius: 5px;
+                  margin-top: 5px;
+                  .img {
+                    img {
+                      width: 40px;
+                      border-radius: 5px;
+                    }
+                  }
+                  .name {
+                    a {
+                      font-size: 13px;
+                      font-weight: 600;
+                      cursor: pointer;
+                      color: #212529;
+                      transition: all 0.4s;
+                      &:hover {
+                        color: #305ccc;
+                      }
+                    }
+                    p {
+                      font-size: 11px;
+                      font-weight: 600;
+                      color: #8492a6;
+                      margin: 0;
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
