--- a/client/src/layouts/admin/header/index.scss
+++ b/client/src/layouts/admin/header/index.scss
@@ -8,10 +8,10 @@
     align-items: center;
     width: 100%;
     .nav {
-      width: 20%;
+      width: 22.4%;
       border-right: 1px solid #e9ecef;
       border-bottom: 1px solid #e9ecef;
-      padding: 20px 0;
+      padding: 20px 40px;
     }
     .header-body {
       width: 80%;
