--- a/client/src/pages/admin/doctors-lists/index.scss
+++ b/client/src/pages/admin/doctors-lists/index.scss
@@ -1,3 +1,194 @@
-#doctors-list{
-    padding: 60px 0;
+#doctors-list {
+  padding: 60px 0;
+  .doctors {
+    margin-left: 290px;
+    padding: 0 20px;
+    h1 {
+      margin-top: 20px;
+      letter-spacing: 0.5px;
+      font-size: 24px;
+      line-height: 1.5;
+      font-weight: 600;
+    }
+    .links {
+      padding: 8px 5px;
+      border-radius: 5px;
+      display: flex;
+      text-align: center;
+      column-gap: 15px;
+      margin-top: 10px;
+      background-color: #fff;
+      span {
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        a {
+          color: #212529;
+          font-size: 12px;
+          font-weight: 500;
+          letter-spacing: 1px;
+          transition: all 0.5s;
+          &.active {
+            color: #396cf0;
+          }
+          &:hover {
+            color: #396cf0;
+          }
+        }
+        .antd-icon {
+          font-size: 8px;
+          font-weight: 600;
+        }
+      }
+    }
+    .doctors-list {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 10px;
+      .doctor {
+        width: 18%;
+        height: auto;
+        transition: all 0.5s;
+        .card {
+          box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
+          border-radius: 5px;
+          transition: all 0.5s;
+          padding: 5px 0;
+          .image {
+            display: flex;
+            justify-content: center;
+            position: relative;
+            img {
+              width: 100%;
+              border-top-left-radius: 5px;
+              border-top-right-radius: 5px;
+            }
+            .card-icons {
+              display: none;
+              margin-top: 20px;
+              position: absolute;
+              left: 10px;
+              bottom: 10px;
+              transition: all 0.5s;
+              .circle {
+                margin-top: 8px;
+                width: 36px;
+                height: 36px;
+                border-radius: 50%;
+                background-color: #396cf01a;
+                background-color: rgba(57, 108, 240, 0.1);
+                border: 1px solid rgba(57, 108, 240, 0.1);
+                -webkit-box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+                box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                transition: all 0.5s;
+                .fa-brands {
+                  color: #396cf0;
+                  font-size: 13px;
+                  transition: all 0.4s;
+                }
+                &:hover {
+                  background-color: #396cf0;
+                  .fa-brands {
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+          .about-doctor {
+            padding: 25px;
+            -webkit-transition: all 0.5s;
+            transition: all 0.5s;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+            h4 {
+              text-align: center;
+              a {
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 1.2;
+                color: black;
+              }
+            }
+            .job {
+              text-align: center;
+              color: #8492a6;
+              font-size: 12px;
+              margin-top: 10px;
+            }
+          }
+          &:hover {
+            .about-doctor {
+              background-color: #305ccc;
+              h4 {
+                a {
+                  color: #fff;
+                }
+              }
+              .job {
+                color: #9bacc4;
+              }
+            }
+            .card-icons {
+              display: block;
+            }
+          }
+        }
+        .btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          column-gap: 10px;
+          margin-top: 20px;
+          width: 100%;
+          .deleteBtn {
+            padding: 10px 20px;
+            outline: 0;
+            width: 45%;
+            cursor: pointer;
+            font-size: 15px;
+            letter-spacing: 0.5px;
+            -webkit-transition: all 0.4s;
+            transition: all 0.4s;
+            border-radius: 5px;
+            background-color: rgba(223, 35, 35, 0.342);
+            border: 1px solid rgba(240, 93, 57, 0.1);
+            color: #23459c;
+            box-shadow: 0 3px 5px 0 rgba(235, 75, 75, 0.3);
+            font-size: 15px;
+            &:hover {
+              background-color: #d41010e1;
+              color: #fff;
+            }
+          }
+          .editBtn {
+            padding: 10px 20px;
+            outline: 0;
+            width: 45%;
+            cursor: pointer;
+            font-size: 15px;
+            letter-spacing: 0.5px;
+            -webkit-transition: all 0.4s;
+            transition: all 0.4s;
+            border-radius: 5px;
+            background-color: rgba(32, 173, 72, 0.596);
+            border: 1px solid rgba(57, 108, 240, 0.1);
+            color: #396cf0;
+            box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+            font-size: 15px;
+            &:hover {
+              background-color: #138d42e1;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
 }
