--- a/client/src/pages/admin/add-doctor/index.scss
+++ b/client/src/pages/admin/add-doctor/index.scss
@@ -1,36 +1,29 @@
 #add-doctor {
   padding: 60px 0;
   .add-doctor {
-    margin-left: 290px;
+    margin-left: 320px;
     margin-top: 20px;
     margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     form {
-      padding: 30px;
+      padding: 30px 60px;
       box-shadow: 0px 0px 3px 0px rgba(60, 72, 88, 0.15);
       border-radius: 5px;
       background-color: #fff;
-      width: 450px;
+      width: 700px;
       .form {
         display: flex;
         align-items: center;
+        justify-content: center;
         column-gap: 30px;
         .left,
         .right {
+          width: 50%;
           .input-control {
             margin-top: 20px;
             p {
               margin: 8px 0;
               label {
                 font-size: 14px;
-                .required {
-                  color: #f0735a;
-                  font-size: 15px;
-                  font-weight: 600;
-                  margin: 2px 5px;
-                }
               }
             }
             input {
@@ -70,6 +63,40 @@
               }
             }
           }
+          .input-image {
+            margin-top: 20px;
+            p {
+              margin: 8px 0;
+              label {
+                font-size: 14px;
+              }
+            }
+            input {
+              color: transparent;
+              width: 100%;
+              height: 20px;
+              border: 1px solid #d9d9d9;
+              padding: 18px 11px;
+              border-radius: 6px;
+              font-size: 14px;
+              outline: 0;
+              display: flex;
+              justify-self: center;
+              align-items: center;
+              &::-webkit-file-upload-button {
+                visibility: hidden;
+              }
+              &::before {
+                content: "Select some files";
+                color: rgba(0, 0, 0, 0.726);
+                cursor: pointer;
+                white-space: nowrap;
+                text-shadow: 1px 1px #fff;
+                font-weight: 600;
+                margin-top: -8px;
+              }
+            }
+          }
         }
       }
 
@@ -82,6 +109,9 @@
       }
       .btn {
         margin-top: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         button {
           display: flex;
           align-items: center;
