--- a/client/src/pages/admin/dashboard/index.scss
+++ b/client/src/pages/admin/dashboard/index.scss
@@ -7,112 +7,13 @@
     .body-admin {
       width: 70%;
       margin-left: 380px;
-      .doctors {
-        h1 {
-          margin-top: 20px;
-          letter-spacing: 0.5px;
-          font-size: 24px;
-          line-height: 1.5;
-          font-weight: 600;
-        }
-        .cards-doctor {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 20px;
-          width: 100%;
-          margin-top: 10px;
-          .card {
-            width: 18%;
-            box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
-            border-radius: 5px;
-            -webkit-transition: all 0.5s;
-            transition: all 0.5s;
-            .image {
-              overflow: hidden;
-              display: flex;
-              justify-content: center;
-              position: relative;
-              img {
-                width: 100%;
-                border-top-left-radius: 5px;
-                border-top-right-radius: 5px;
-              }
-              .card-icons {
-                display: none;
-                margin-top: 20px;
-                position: absolute;
-                left: 10px;
-                bottom: 10px;
-                transition: all 0.5s;
-                .circle {
-                  margin-top: 8px;
-                  width: 36px;
-                  height: 36px;
-                  border-radius: 50%;
-                  background-color: #396cf01a;
-                  background-color: rgba(57, 108, 240, 0.1);
-                  border: 1px solid rgba(57, 108, 240, 0.1);
-                  -webkit-box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
-                  box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  cursor: pointer;
-                  transition: all 0.5s;
-                  .fa-brands {
-                    color: #396cf0;
-                    font-size: 13px;
-                    transition: all 0.4s;
-                  }
-                  &:hover {
-                    background-color: #396cf0;
-                    .fa-brands {
-                      color: #fff;
-                    }
-                  }
-                }
-              }
-            }
-            .about-doctor {
-              padding: 25px;
-              -webkit-transition: all 0.5s;
-              transition: all 0.5s;
-              border-bottom-left-radius: 5px;
-              border-bottom-right-radius: 5px;
-              h4 {
-                text-align: center;
-                a {
-                  font-weight: 600;
-                  font-size: 18px;
-                  line-height: 1.2;
-                  color: black;
-                }
-              }
-              .job {
-                text-align: center;
-                color: #8492a6;
-                font-size: 13.5px;
-                margin-top: 10px;
-              }
-            }
-            &:hover {
-              .about-doctor {
-                background-color: #305ccc;
-                h4 {
-                  a {
-                    color: #fff;
-                  }
-                }
-                .job {
-                  color: #9bacc4;
-                }
-              }
-              .card-icons {
-                display: block;
-              }
-            }
-          }
-        }
+      h1 {
+        margin-top: 20px;
+        letter-spacing: 0.5px;
+        font-size: 30px;
+        line-height: 1.5;
+        font-weight: 600;
+        color: rgb(10, 32, 129);
       }
     }
   }
