--- a/client/src/components/site/card-doctors/index.scss
+++ b/client/src/components/site/card-doctors/index.scss
@@ -18,6 +18,9 @@
         text-align: center;
       }
     }
+    .spinner {
+      margin-top: 80px;
+    }
     h1 {
       margin-top: 20px;
       text-align: center;
@@ -53,6 +56,34 @@
           overflow: hidden;
           display: flex;
           justify-content: center;
+          position: relative;
+          .icon {
+            position: absolute;
+            right: 10px;
+            z-index: 3;
+            margin: 20px 0;
+            height: 36px;
+            width: 36px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            background-color: rgba(240, 115, 90, 0.1);
+            border: 1px solid rgba(240, 115, 90, 0.1);
+            color: #f0735a;
+            transition: all 0.4s;
+            cursor: pointer;
+            .fa-solid {
+              color: #f0735a;
+            }
+            .fa-regular {
+              color: #f0735a;
+            }
+            &:hover {
+              background-color: #f0735a;
+              color: #fff;
+            }
+          }
           img {
             width: 100%;
             -webkit-transition: all 0.5s;
