--- a/client/src/pages/site/details-page/index.scss
+++ b/client/src/pages/site/details-page/index.scss
@@ -94,7 +94,6 @@
             color: #8492a6;
             letter-spacing: 0.5px;
             font-weight: 600;
-
           }
         }
         .btn {
@@ -122,6 +121,11 @@
             &:hover {
               background-color: #305ccc;
               color: #fff;
+            }
+            &:disabled {
+              border: 1px solid rgba(45, 45, 46, 0.1);
+              background-color: rgba(189, 190, 192, 0.322);
+              box-shadow: 0;
             }
           }
         }
