--- a/client/src/pages/site/wishlist/index.scss
+++ b/client/src/pages/site/wishlist/index.scss
@@ -1,13 +1,13 @@
-#doctors-team {
-  .doctors-team {
+#wishlist-page {
+  .wishlist-page {
     padding: 60px 0;
     background-color: #f8f9fa;
     width: 100%;
-    .doctors {
+    .wishlist-head {
       .header-team {
         display: flex;
         justify-content: center;
-        margin: 130px 0;
+        padding: 130px 0;
         .head {
           h1 {
             text-align: center;
@@ -57,51 +57,13 @@
       }
     }
   }
-  .card-doctors-team {
+  .fav-doctors {
     background-color: #fff;
     padding: 80px 0;
-    .filter {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 50px;
-      @media only screen and (max-width: 768px) {
-        flex-direction: column;
-        row-gap: 30px;
-      }
-      input {
-        width: 500px;
-      }
-      .sort {
-        text-align: center;
-        font-weight: 600;
-        color: #396cf0;
-        cursor: pointer;
-        .btn {
-          margin-top: 10px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          button {
-            width: 100%;
-            display: block;
-            text-align: center;
-            border: 0;
-            outline: 0;
-            cursor: pointer;
-            &:hover {
-              background-color: #c2cfee63;
-            }
-          }
-        }
-      }
-    }
-    .spinner{
-      margin-top: 80px;
-    }
     .cards {
       display: flex;
       flex-wrap: wrap;
+      align-items: center;
       gap: 20px;
       width: 100%;
       margin-top: 60px;
@@ -110,6 +72,7 @@
         box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
         display: flex;
+        align-items: center;
         .image {
           overflow: hidden;
           display: flex;
@@ -143,9 +106,6 @@
             margin-top: 10px;
           }
           .star {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             margin-top: 10px;
             .star-icon {
               .fa-sharp {
@@ -154,22 +114,25 @@
                 font-size: 11px;
               }
             }
-            .star-count {
-              font-size: 15px;
-              color: #8492a6;
-            }
           }
-          .about-work {
-            margin-top: 10px;
-            .icon {
-              color: #396cf0;
-              font-size: 12px;
-            }
-            span {
-              font-size: 13.5px;
-              color: #8492a6;
-              padding-left: 8px;
-            }
+          .btn{
+            margin-top: 20px;
+            button {
+                border-radius: 5px;
+                padding: 8px 10px;
+                border: 0;
+                outline: 0;
+                background-color: #fa6262;
+                color: #fff;
+                cursor: pointer;
+                transition: all 0.5s;
+                .fa-solid {
+                  margin-right: 8px;
+                }
+                &:hover {
+                  background-color: #c70202;
+                }
+              }
           }
           .card-icons {
             margin-top: 20px;
